--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <html>
 <head> 
+<meta name="keywords" content="forzajecontacto">
 	<title> contactos </title>
 </head>
-<body> 
-<h1> Contactos </h1>
-</body>
+<body bgcolor="eaeded"> 
+<p>
+<center>
+<img src="cabecera.png">
+<p> 
+<a href="final.html"><img src="1.png"> </a>
+<p> 
+<a href="final.html"><img src="2.png"> </a>
+<p> 
+<a href="final.html"><img src="3.png"> </a>
+<p> 
+<a href="final.html"><img src="4.png"> </a>
+<p> 
+<a href="final.html"><img src="5.png"> </a>
+<p>
+<a href="final.html"><img src="9.png"> </a>
+<p>  
+<a href="final.html"><img src="7.png"> </a>
+<p> 
+<a href="final.html"><img src="8.png"> </a>
 </html>
